--- a/src/main/webapp/templates/main.xhtml
+++ b/src/main/webapp/templates/main.xhtml
@@ -12,14 +12,14 @@
 
 <h:body>
     <header>
-        Самойлова Артемия Александровна P3230 87111
-        <div id="header-navigation">
-            <h:button type="button" outcome="changePage" value="На начальную"/>
+        <div id="header-content">
+            Самойлова Артемия Александровна P3230 87111
+            <div id="header-navigation">
+                <h:button type="button" outcome="changePage" value="На начальную" styleClass="button-link"/>
+            </div>
         </div>
     </header>
     <div id="notification-container"></div>
-    <!--  todo доделать валидацию  <div id="notification-container"></div>-->
-
     <div id="main" class="grid-container">
 
         <div class="canvas-container">
