--- a/src/main/webapp/templates/start.xhtml
+++ b/src/main/webapp/templates/start.xhtml
@@ -12,13 +12,13 @@
     <header>
         Самойлова Артемия Александровна P3230 87111
         <div id="header-navigation">
-            <h:button type="button" outcome="changePage" value="На главную"/>
+            <h:button type="button" outcome="changePage" value="На главную" styleClass="button-link"/>
         </div>
     </header>
     <div id="gridContainer">
         <div class="main">
             <div id="clockWrapper">
-                <canvas id="clockCanvas" width="500" height="500"/>
+                <canvas id="clock" width="700" height="700"/>
             </div>
         </div>
 
