--- a/src/main/webapp/resources/static/styles/style.css
+++ b/src/main/webapp/resources/static/styles/style.css
@@ -1,6 +1,5 @@
 @font-face {
     font-family: "Pecita";
-    src: url("../fonts/Pecita.otf");
     src: url("../fonts/Pecita.otf") format("opentype");
 }
 
@@ -45,28 +44,28 @@ header {
     margin-left: 20px;
 }
 
-.button-link {
-    display: inline-block;
-    padding: 8px 16px;
-    margin: 4px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #FF8A5B;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 4px;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+/*.button-link {*/
+/*    display: inline-block;*/
+/*    padding: 8px 16px;*/
+/*    margin: 4px;*/
+/*    font-size: 16px;*/
+/*    color: #fff;*/
+/*    background-color: #FF8A5B;*/
+/*    text-align: center;*/
+/*    text-decoration: none;*/
+/*    border-radius: 4px;*/
+/*    border: none;*/
+/*    cursor: pointer;*/
+/*    transition: background-color 0.3s ease;*/
+/*}*/
 
-.button-link:hover {
-    background-color: #FF6F3C;
-}
+/*.button-link:hover {*/
+/*    background-color: #FF6F3C;*/
+/*}*/
 
-.button-link:active {
-    background-color: #FF5A26;
-}
+/*.button-link:active {*/
+/*    background-color: #FF5A26;*/
+/*}*/
 
 body {
     display: flex;
@@ -142,6 +141,10 @@ body {
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
+}
+
+.button-link.active {
+    background-color: #25CEB0;
 }
 
 .button-link:hover {
